--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,8 +19,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd trellomini
           python -m pip install --upgrade pip
-          pip install -r trellomini/requirements.txt
+          pip install -r requirements.txt
 
       - name: Create .env file
         run: |
