--- a/.github/workflows/django-build.yml
+++ b/.github/workflows/django-build.yml
@@ -97,4 +97,4 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/trellomini:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/trellomini:${{ env.SHORT_SHA::7 }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/trellomini:${{ env.SHORT_SHA }}
